# c-SqlParse

./: .gitignore  CMakeLists.txt  sqlparser.cc  sqlparser.h
example/: CMakeLists.txt  test.cc
include/: EndOfQueryException.h  ExpressionModelUtils.h  IntervalSpec.h  InvalidProtocolException.h  PatternWindowSpec.h  Protocol.h  ProtocolRelation.h  QueryRelation.h  SlidingWindowSpec.h  SqlDistributedPlan.h  SqlDistributedPlanner.h  SqlFragment.h  SqlJoinSpec.h  SqlJoinType.h  SqlPlan.h  SqlQueryParser.h  SqlQueryPlanner.h  SqlQueryScanner.h  SqlRelation.h  SqlStatement.h  SqlSyntaxUtils.h  SqlWindowSpec.h  SqlWindowType.h  StatementParseException.h  TableRelation.h  TumblingWindowSpec.h
src/: ExpressionModelUtils.cpp  SqlDistributedPlanner.cpp  SqlQueryParser.cpp  SqlQueryPlanner.cpp  SqlQueryScanner.cpp  SqlStatement.cpp  SqlSyntaxUtils.cpp
test/: CMakeLists.txt  SqlDistributedPlannerTest.cpp  SqlQueryParserTest.cpp  SqlQueryPlannerTest.cpp
